# cusnn

./: .gitattributes  CMakeCache.txt  CMakeLists.txt  CUSNN  LICENSE  Makefile  README.md  cmake_install.cmake  example  example.cpp  snn  snn.cu  snn.h
src/: snn.cu
tests/: data.txt  gn_data  gn_data.cpp  run.sh  snn_verify.py
